kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
  name: app-ingress
spec:
  tls:
  - hosts:
    - api.dappest.co
    secretName: dappest-cluster-co-tls
  rules:
  - host: api.dappest.co # TODO: add Route 53 A record pointing to ELB
    http:
      paths:
      - backend:
          serviceName: dappest-api
          servicePort: http
        path: /
